@@ -271,6 +271,8 @@ Changed in ATK 5.6.1
 * Fixed problem in atkonetoonerelation causing the record not to be
   inserted when it should be. [Guido]
 * Fixed deprecated text() calls. [Guido]
+* Fixed problem with the serialization of select fields in the
+  prototype library. [Peter]
 
 Changed in ATK 5.6
 ------------------
